# hl-jit-rs

./: .gitignore  Cargo.toml  build.rs  header.h
crates/hl-code/: Cargo.toml
crates/hl-code-derive/: Cargo.toml
crates/hl-code-derive/src/: lib.rs
crates/hl-code/src/: lib.rs  opcode.rs  reader.rs
src/: code.rs  ffi_callbacks.c  jit.rs  main.rs  object.rs  opcode.rs
src/codegen/: data.rs  emit.rs  mod.rs
