[package]
name = "hl-jit"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0 WITH LLVM-exception"

[dependencies]
backtrace = "0.3.74"
clap = { version = "4.5.31", features = ["derive"] }
cranelift = { version = "0.116.1", features = ["jit", "module", "native", "object"] }
libloading = "0.8.6"

[build-dependencies]
bindgen = "0.71.1"
cc = "1.2.16"
